WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310099
[GTK] fast/forms/implicit-submit.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=310099
Summary
[GTK] fast/forms/implicit-submit.html is a flaky crash
Claudio Saavedra
Reported
2026-03-17 07:48:38 PDT
https://results.webkit.org/?suite=layout-tests&test=fast%2Fforms%2Fimplicit-submission.html&platform=GTK&style=release
Thread 1 (Thread 0x7f2d99ce4f00 (LWP 798881)): #0 0x00007f2da20ce671 in g_logv () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #1 0x00007f2da20ce923 in g_log () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #2 0x00007f2da23a97e2 in gtk_popover_get_autohide (popover=0x55b861ecbd30) at ../../../../../jhbuild/checkout/gtk4/gtk/gtkpopover.c:2350 #3 gtk_popover_get_autohide (popover=0x55b861ecbd30) at ../../../../../jhbuild/checkout/gtk4/gtk/gtkpopover.c:2346 #4 0x00007f2da23aa002 in cascade_popdown (popover=0x55b861ecbd30) at ../../../../../jhbuild/checkout/gtk4/gtk/gtkpopover.c:2376 #5 gtk_popover_popdown (popover=0x55b861ecbd30) at ../../../../../jhbuild/checkout/gtk4/gtk/gtkpopover.c:2419 #6 gtk_popover_popdown (popover=0x55b861ecbd30) at ../../../../../jhbuild/checkout/gtk4/gtk/gtkpopover.c:2410 #7 0x00007f2da7947df7 in WebKit::WebPopupMenuProxyGtk::hidePopupMenu() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #8 0x00007f2da766d62d in WebKit::WebPageProxy::hidePopupMenu() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #9 0x00007f2da7017f15 in WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #10 0x00007f2da754f393 in IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #11 0x00007f2da76ef4c1 in WebKit::WebProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #12 0x00007f2da702c306 in WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #13 0x00007f2da7545a5b in IPC::Connection::dispatchMessage(IPC::Decoder&) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #14 0x00007f2da7547de5 in IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) [clone .part.0] () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #15 0x00007f2da7548a90 in IPC::Connection::dispatchIncomingMessages() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #16 0x00007f2da4d6a7a5 in WTF::RunLoop::performWork() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #17 0x00007f2da4e5a0fd in WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #18 0x00007f2da4e5db3d in WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #19 0x00007f2da20c945e in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #20 0x00007f2da2128977 in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #21 0x00007f2da20c8a23 in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #22 0x000055b820c5dd6d in WTR::TestController::platformRunUntil(bool&, WTF::Seconds) () #23 0x000055b820c483f4 in WTR::TestInvocation::invoke() () #24 0x000055b820c38aff in WTR::TestController::runTest(char const*) () #25 0x000055b820c38f2d in WTR::TestController::runTestingServerLoop() () #26 0x000055b820c39689 in WTR::TestController::TestController(int, char const**) () #27 0x000055b820c60ade in main ()
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2026-03-17 08:11:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60770
EWS
Comment 2
2026-03-18 02:41:17 PDT
Committed
309468@main
(0059c82f9dd9): <
https://commits.webkit.org/309468@main
> Reviewed commits have been landed. Closing PR #60770 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug