Cherry-pick 309468@main (0059c82f9dd9). https://bugs.webkit.org/show_bug.cgi?id=310099

[GTK] fast/forms/implicit-submit.html is a flaky crash
    https://bugs.webkit.org/show_bug.cgi?id=310099

    Reviewed by Carlos Garcia Campos.

    hidePopupMenu() has a reentrancy issue, in that its gtk_popover_popdown()
    call will trigger a GtkPopover:closed emission that will reenter hidePopupMenu(),
    causing it to be removed from its parent before the parent call to
    gtk_popover_popdown() has finished, which will cause a dangling object
    to be used.

    This can be tentatively fixed by disconnecting the handlers in hidePopupMenu()
    directly, instead of cancelTracking(). Not verified locally as I can't reproduce
    the crash.

    * Source/WebKit/UIProcess/gtk/WebPopupMenuProxyGtk.cpp:
    (WebKit::WebPopupMenuProxyGtk::hidePopupMenu):
    (WebKit::WebPopupMenuProxyGtk::cancelTracking):

    Canonical link: https://commits.webkit.org/309468@main

Canonical link: https://commits.webkit.org/298234.511@webkitglib/2.50